Shorten nav label and reduce mobile link padding to prevent wrapping

--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -835,7 +835,7 @@ form ::-moz-focus-inner {
     }
 
     #nav a {
-        padding: 0 0.75em;
+        padding: 0 0.5em;
         height: inherit;
         line-height: inherit;
         border-radius: 0;
